# backend/internal/storage/postgres/schema/event-occurrence/get_all.go
@@ -36,7 +36,7 @@ func (r *EventOccurrenceRepository) GetAllEventOccurrences(ctx context.Context, 
 		filters.RadiusKm,
 		filters.MinAge,
 		filters.MaxAge,
-		filters.Category,
+		filters.Categories,
 		filters.SoldOut,
 		filters.MinDate,
 		filters.MaxDate,
